change to use bintray's GPG signing key

--- a/acnsdk/build.gradle
+++ b/acnsdk/build.gradle
@@ -174,9 +174,9 @@ bintray {
         version {
             desc = libraryDescription
             gpg {
-                sign = true //Determines whether to GPG sign the files. The default is false
-                passphrase = property("bintray.gpg.password")
-                //Optional. The passphrase for GPG signing'
+                // sign = true //Determines whether to GPG sign the files. The default is false
+                // passphrase = property("bintray.gpg.password")
+                // Optional. The passphrase for GPG signing'
             }
         }
     }
